--- a/HouseRentingSystem/HouseRentingSystem.csproj
+++ b/HouseRentingSystem/HouseRentingSystem.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HouseRentingSystem.InfraStructure\HouseRentingSystem.InfraStructure.csproj" />
+  </ItemGroup>
+
 </Project>
